fix: scroll dots flickering on scrollling

--- a/src/Components/CardView/CardView.css
+++ b/src/Components/CardView/CardView.css
@@ -76,7 +76,7 @@
   display: flex;
   justify-content: center;
   padding: 0 1vw;
-  margin: 0 4.5vw;
+  margin: 1vw 4.5vw 0 4.5vw;
 }
 
 .dots {
